k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: records-api
  namespace: nagp-assignment
spec:
  replicas: 4
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: records-api
  template:
    metadata:
      labels:
        app: records-api
        tier: service
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: records-api
          image: shivendra1s/records-api:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
