k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: records-api
  namespace: nagp-assignment
spec:
  selector:
    app: records-api
  ports:
    - name: http
      port: 80
      targetPort: http
