k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: records-api
  namespace: nagp-assignment
spec:
  ingressClassName: nginx
  rules:
    - host: records.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: records-api
                port:
                  number: 80
